fix: fixed custom context menus not appearing where they should on mobile

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -3,6 +3,7 @@ div {
 }
 
 .context-menu {
+    z-index: 10000;
     position: absolute;
     background: lightcoral
 }
